IE: Fix elements "jumping" when the accordian is used.

--- a/public/stylesheets/sass/accordion.sass
+++ b/public/stylesheets/sass/accordion.sass
@@ -5,6 +5,9 @@
   color: #333
   min-width: 418px
 
+  .accordion_element
+    position: relative
+
 
   ul
     margin: 0
